# nbclient

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: check-release.yml  main.yml  prep-release.yml  publish-changelog.yml  publish-release.yml  zizmor.yml
binder/: empty_notebook.ipynb  environment.yml  requirements.txt  run_nbclient.ipynb
docs/: Makefile  autogen_config.py  changelog.md  client.rst  conf.py  environment.yml  execute.rst  index.rst  installation.rst  make.bat  requirements-doc.txt
docs/reference/: config_options.rst  index.rst  modules.rst  nbclient.rst  nbclient.tests.rst
nbclient/: __init__.py  _version.py  cli.py  client.py  exceptions.py  execute.py  jsonutil.py  matplotlib.py  nbclient.py  output_widget.py  util.py
nbclient/tests/: base.py  conftest.py  fake_kernelmanager.py  test_client.py  test_execute.py  test_util.py
nbclient/tests/files/: Markdown_expressions.ipynb  Matplotlib.ipynb  Skip Execution with Cell Tag.ipynb
tests/: conftest.py  fake_kernelmanager.py  test_cli.py  test_client.py
tests/files/: InputRequest.ipynb  Interrupt.ipynb  Skip Exceptions with Cell Tags.ipynb  update-display-id.ipynb
